feat: add signup and signin endpoints
